modification apres avoir cloner

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello!</title>
+    <title>Hello bogoss</title>
     <meta name="description" content="description"/>
     <meta name="author" content="author" />
     <meta name="keywords" content="keywords" />
@@ -11,5 +11,6 @@
   </head>
   <body>
 <p>Challenge-3 Essai <p>
+  <h1>modification apres avoir cloner</h1>
   </body>
 </html>
